--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,11 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    // "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
     "sourceMap": true,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "isolatedModules": true
   },
   "include": ["src"]
 }
