--- a/package.json
+++ b/package.json
@@ -8,12 +8,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/jspdf": "^1.3.3",
-    "@types/node": "^12.12.29",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-router-dom": "^5.1.3",
     "firebase": "^7.9.3",
     "jspdf": "^1.5.3",
     "react": "^16.13.0",
@@ -21,6 +15,14 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "^3.7.5"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.9.1",
+    "@types/jspdf": "^1.3.3",
+    "@types/node": "^12.12.29",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
