Refactored storage logic for better use in the rest of the app

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,7 +15,8 @@
     "jsx": "react",
     "sourceMap": true,
     "strictNullChecks": false,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "downlevelIteration": true
   },
   "include": ["src"]
 }
