--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prestart": "node ../updateWSLip.js"
   },
   "eslintConfig": {
     "extends": "react-app"
