Added support for firebase emulators Implemented functionality to add orders

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,8 +15,7 @@
     "jsx": "react",
     "sourceMap": true,
     "strictNullChecks": false,
-    "isolatedModules": true,
-    "downlevelIteration": true
+    "isolatedModules": true
   },
   "include": ["src"]
 }
