--- a/firebase.json
+++ b/firebase.json
@@ -17,8 +17,7 @@
     ]
   },
   "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "rules": "firestore.rules"
   },
   "emulators": {
     "functions": {
