--- a/firebase.json
+++ b/firebase.json
@@ -41,13 +41,18 @@
   },
   "emulators": {
     "functions": {
-      "host": "172.27.59.237",
+      "host": "172.30.30.49",
       "port": 5001
     },
     "firestore": {
-      "host": "172.27.59.237",
+      "host": "172.30.30.49",
       "port": 8080
     },
-    "ui": { "enabled": true }
+    "ui": {
+      "enabled": true
+    },
+    "hosting": {
+      "port": 5000
+    }
   }
 }
