--- a/firebase.json
+++ b/firebase.json
@@ -46,6 +46,9 @@
     "firestore": {
       "port": 8080
     },
+    "auth": {
+      "port": 9099
+    },
     "ui": {
       "enabled": true
     }
